brain/sources/prod-metadata/objects/Company__c/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <description>Official website URL of the company, used as a unique identifier to distinguish company records.</description>
    <label>Company Website</label>
    <type>Url</type>
</CustomField>