brain/sources/prod-metadata/objects/Company__c/fields/Interview_Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Interview_Difficulty__c</fullName>
    <description>Calculated difficulty rating based on company Tier</description>
    <formula>IF(ISPICKVAL(Tier__c, &quot;FAANG / Top Product&quot;), &quot;Very Hard&quot;,
IF(ISPICKVAL(Tier__c, &quot;Product Company&quot;), &quot;Hard&quot;,
IF(ISPICKVAL(Tier__c, &quot;Startup&quot;), &quot;Medium-Hard&quot;,
IF(ISPICKVAL(Tier__c, &quot;Services / Consulting&quot;), &quot;Medium&quot;,
IF(ISPICKVAL(Tier__c, &quot;Mid-Market&quot;), &quot;Medium&quot;,
IF(ISPICKVAL(Tier__c, &quot;Enterprise&quot;), &quot;Hard&quot;,
&quot;Not Set&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview Difficulty</label>
    <type>Text</type>
</CustomField>