brain/sources/prod-metadata/objects/Company__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Categorizes the company by type/size</description>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FAANG / Top Product</fullName>
            </value>
            <value>
                <fullName>Product Company</fullName>
            </value>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Services / Consulting</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>