brain/sources/prod-metadata/objects/Company__c/fields/Typical_Rounds__c.field-meta.xml
<CustomField>
    <fullName>Typical_Rounds__c</fullName>
    <description>Average number of interview rounds for this company. Maintained by Flow.</description>
    <label>Typical Rounds</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>